# memorial-

./: .gitignore  PERFORMANCE_REPORT.md  README.md  config.yaml  index.html  package-lock.json  package.json  vite.config.ts
rules/: devices.yaml  locations.yaml
scripts/: perf-report.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyzer.rs  classifier.rs  duplicate.rs  helpers.rs  manifest.rs  mod.rs  mover.rs  utils.rs  zip_handler.rs
src/components/ArchiveBrowser/: FolderTree.tsx  ThumbnailGrid.tsx  index.tsx
src/components/Dashboard/: RecentSessions.tsx  StatsCard.tsx  index.tsx
src/components/DuplicateManager/: ComparisonView.tsx  index.tsx
src/components/InboxAnalyzer/: BatchActions.tsx  SessionCard.tsx  index.tsx
src/components/ReviewQueue/: ReviewFilters.tsx  index.tsx
src/components/SessionDetail/: DeviceChart.tsx  FileGrid.tsx  index.tsx
src/components/Settings/: DeviceRulesEditor.tsx  LocationEditor.tsx  LogViewer.tsx  index.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  (+4 more)
src/hooks/: useArchiveTree.ts  useDuplicateCheck.ts  useHDDStatus.ts  useInboxScan.ts
src/pages/: ArchivePage.tsx  DuplicatesPage.tsx  InboxPage.tsx  ReviewPage.tsx  SessionDetailPage.tsx  SettingsPage.tsx
src/store/: useAppStore.ts  useArchiveStore.ts  useInboxStore.ts
src/types/: index.ts
src/utils/: confidence.ts  device.ts  formatters.ts  pathBuilder.ts
