[package]
name = "memorial"
version = "0.1.0"
description = "Memorial — Local media archive organizer"
authors = []
license = ""
repository = ""
default-run = "memorial"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "memorial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
